mvc pattern maintained with some changes in properties file.

--- a/Test/src/main/resources/templates/users/form.html
+++ b/Test/src/main/resources/templates/users/form.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head><title th:text="${mode == 'create' ? 'Create User' : 'User Details'}">User Form</title></head>
+<head><title th:text="${mode == 'create' ? 'Create User' : (mode == 'edit' ? 'Edit User' : 'User Details')}">User Form</title></head>
 <body>
-<h1 th:text="${mode == 'create' ? 'Create New User' : 'User Details'}"></h1>
+<h1 th:text="${mode == 'create' ? 'Create New User' : (mode == 'edit' ? 'Edit User' : 'User Details')}"></h1>
 <div th:if="${error}" th:text="${error}" style="color:red;"></div>
+
+<!-- Form for Create mode -->
 <form th:action="@{/users}" th:object="${user}" method="post" th:if="${mode == 'create'}">
     <input type="hidden" th:field="*{id}" />
     <label>Name: <input type="text" th:field="*{name}" /></label><br/>
     <label>Email: <input type="text" th:field="*{email}" /></label><br/>
     <button type="submit">Save</button>
+    <a th:href="@{/users}">Cancel</a>
 </form>
+
+<!-- Form for Edit mode -->
+<form th:action="@{/users}" th:object="${user}" method="post" th:if="${mode == 'edit'}">
+    <input type="hidden" th:field="*{id}" />
+    <label>Name: <input type="text" th:field="*{name}" /></label><br/>
+    <label>Email: <input type="text" th:field="*{email}" /></label><br/>
+    <button type="submit">Update</button>
+    <a th:href="@{/users}">Cancel</a>
+</form>
+
+<!-- View mode -->
 <div th:if="${mode == 'view'}">
     <p><strong>Name:</strong> <span th:text="${user.name}"></span></p>
     <p><strong>Email:</strong> <span th:text="${user.email}"></span></p>
