--- a/Test/src/main/resources/templates/users/list.html
+++ b/Test/src/main/resources/templates/users/list.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head><title>User List</title></head>
+<head><title>User List</title>
+    <style>
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            color: black;
+            border: 1px solid black;
+        }
+        th, td {
+            border: 1px solid black;
+            padding: 8px;
+        }
+        th {
+            background-color: #f2f2f2;
+        }
+    </style>
+</head>
+
+
+
 <body>
 <h1>User List</h1>
 <a th:href="@{/users/new}">Add New User</a>
-<table>
+<table style ="width:100%; border-collapse: collapse; color: black">
     <tr>
         <th>ID</th>
         <th>Name</th>
@@ -16,7 +35,8 @@
         <td th:text="${user.name}"></td>
         <td th:text="${user.email}"></td>
         <td>
-            <a th:href="@{/users/{id}(id=${user.id})}">View</a> |
+            <a th:href="@{/users/{id}(id=${user.id})}">View Details</a> |
+            <a th:href="@{/users/{id}/edit(id=${user.id})}">Edit</a> |
             <a th:href="@{/users/{id}/delete(id=${user.id})}" onclick="return confirm('Delete?')">Delete</a>
         </td>
     </tr>
